# qBittorrent

./: CMakeLists.txt
.github/workflows/: ci_qt6_win_mac_test.yaml
src/: CMakeLists.txt
src/app/: CMakeLists.txt  application.cpp  application.h  upgrade.cpp
src/base/: CMakeLists.txt  addtorrentmanager.cpp  addtorrentmanager.h  base.pri  genericdatastorage.cpp  genericdatastorage.h  keyvaluedataaccessor.h  keyvaluedatastorage.h  pluginsengine.cpp  pluginsengine.h  preferences.cpp  preferences.h  settingsstorage.cpp  settingsstorage.h  settingvalue.h  torrentfileswatcher.cpp  torrentfileswatcher.h  torrentfilter.cpp
src/base/bittorrent/: customstorage.cpp  extensiondata.h  filesearcher.cpp  filesearcher.h  filestoragechecker.cpp  filestoragechecker.h  filestoragecheckresult.h  infohash.cpp  infohash.h  magneturi.cpp  magneturi.h  nativesessionextension.cpp  nativetorrentextension.cpp  nativetorrentextension.h  peerinfo.cpp  peerinfo.h  persistentdatastorage.cpp  persistentdatastorage.h  session.cpp  session.h  sessionbackend.cpp  sessionbackend.h  sessionimpl.cpp  sessionimpl.h  torrent.cpp  torrent.h  torrentbackend.cpp  torrentbackend.h  torrentcontenthandler.cpp  torrentcontenthandler.h  torrentdescriptor.cpp  torrentdescriptor.h  torrentfile.cpp  torrentfile.h  torrenthandle.h  torrenthandleimpl.cpp  torrenthandleimpl.h  torrentimpl.cpp  torrentimpl.h  tracker.h  (+1 more)
src/base/http/: connection.cpp  connection.h  requesthandler.cpp  requesthandler.h  server.cpp
src/base/interfaces/: iapplication.h
src/base/net/: downloadhandlerimpl.cpp  downloadmanager.h
src/base/rss/: rss_autodownloader.cpp  rss_autodownloadrule.cpp  rss_parser.cpp
src/base/utils/: fs.cpp  gzip.cpp  os.cpp  os.h  string.cpp  string.h
src/gui/: CMakeLists.txt  addnewtorrentdialog.cpp  addnewtorrentdialog.h  colormode.h  downloadfromurldialog.cpp  fspathedit_p.cpp  fspathedit_p.h  gui.pri  guiaddtorrentmanager.cpp  guiaddtorrentmanager.h  mainwindow.cpp  optionsdialog.cpp  optionsdialog.h  optionsdialog.ui  settingvalue.h  torrentcontentfiltermodel.cpp  torrentcontentfiltermodel.h  torrentcontentmodel.cpp  torrentcontentmodel.h  torrentcontentmodelfile.cpp  torrentcontentmodelfolder.cpp  torrentcontentmodelfolder.h  torrentcontentmodelitem.cpp  torrentcontentmodelitem.h  torrentcontenttreeview.cpp  torrentcreatordialog.cpp  torrentcreatordialog.h  transferlistfilterswidget.cpp  transferlistmodel.cpp  transferlistwidget.cpp  uithememanager.cpp  uithememanager.h
src/gui/interfaces/: iguiapplication.h
src/gui/properties/: peerlistwidget.cpp  propertieswidget.cpp  propertieswidget.h  proplistdelegate.cpp  proplistdelegate.h  trackerlistwidget.cpp
src/gui/rss/: automatedrssdownloader.cpp  rsswidget.cpp  rsswidget.h
src/gui/search/: searchjobwidget.cpp  searchjobwidget.h  searchwidget.cpp
src/gui/trackerlist/: trackerlistmodel.cpp  trackerlistmodel.h  trackerlistsortmodel.cpp  trackerlistwidget.cpp
src/gui/transferlistfilters/: trackersfilterwidget.cpp  trackersfilterwidget.h
src/webui/: webapplication.cpp  webapplication.h
src/webui/api/: appcontroller.cpp  synccontroller.cpp  torrentscontroller.cpp
src/webui/api/serialize/: serialize_torrent.cpp
